--- a/megaris/export_presets.cfg
+++ b/megaris/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="buildy/completeTest15.apk"
+export_path="buildy/Megaris.apk"
 script_export_mode=1
 script_encryption_key=""
 
